Updated styles in style.css

--- a/style.css
+++ b/style.css
@@ -57,9 +57,9 @@ p {
 }
 
 .delegate-btn {
-    background: #28a745;
+    background: #aec47b;
 }
 
 .delegate-btn:hover {
-    background: #218838;
+    background: #d4749c;
 }
